--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
       <div class="container">
           <header>
-              <p>Cover</p>
+              <p>J'M HOMEPAGE</p>
               <ul>
                 <li><a href = "a">Home</a></li>
                   <li>
