UI 수정, 사이드바 추가

--- a/index.html
+++ b/index.html
@@ -1,43 +1,45 @@
-  <!DOCTYPE html>
-  <html lang="ko">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Test web-site</title>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Web-Site</title>
+    <link rel="stylesheet" href="MyWeb1.css">
+</head>
+<body>
+  <-- 고정 사이드바 -->
+  <div class="sidebar">
+    <h2>메뉴</h2>
+    <ul>
+      <li><a href="#">Profile</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Settings</a></li>
+      <li><a href="#">Logout</a></li>
+    </ul>
+  </div>
 
-      <link rel = "sytlesheet" href="MyWeb1.css">
-  </head>
-  <body>
-      <div class="container">
-          <header>
-              <p>J'M HOMEPAGE</p>
-              <ul>
-                <li><a href = "a">Home</a></li>
-                  <li>
-                      <a href = "a">Feature</a>
-                  </li>
-                  <li>
-                      <a href = "a">Contant</a>
-                  </li>
-              </ui>
-          </header>
-          <section>
-              <p>
-                 지민 개발 홈페이지                      
-              </p>
-              <p>
-                경성대학교 소프트웨어학과 23학번
-                <br>
-              </p>
-              <p>
-                연락처: 010-3932-2606
-              </p>
-            <a href="a"><span>Learn more</span></a>
-          </section>
-          <footer>
-              <p>
-                  dlwlals3456@naver.com / <a href = "">GITHUB</a>
-              </p>
-          </footer>
-  </body>
-  </html>
+  <-- 메인 콘텐츠 -->
+  <div class="main-content">
+    <header>
+      <p>J'M HOMEPAGE</p>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Feature</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </header>
+
+    <section>
+      <p>지민 개발 홈페이지</p>
+      <p>경성대학교 소프트웨어학과 23학번</p>
+      <p>연락처: 010-3932-2606</p>
+      <a href="#">Learn more</a>
+    </section>
+
+    <footer>
+      <p>dlwlals3456@naver.com / <a href="#">GITHUB</a></p>
+    </footer>
+  </div>
+</body>
+
+</html>
